--- a/testes.html
+++ b/testes.html
@@ -21,13 +21,18 @@
     }
 
     var x = 20;
+    var sentido = 1;
 
     function atualizaTela() {
+        limpaTela();
+        if (x > 600){
+            sentido = -1;
+        } else if (x < 0){
+            sentido = 1;
+        }
 
-    limpaTela();
-    desenhaCirculo(x, 20, 10);
-    x++;
-    //limpaTela();
+        desenhaCirculo(x, 20, 10);
+        x = x + sentido;
     }
 
     setInterval(atualizaTela, 20);
