--- a/formulario/Formulario.html
+++ b/formulario/Formulario.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="jsForms.js"></script>
     <title>Formulario</title>
-<center></head>
-    <body>
+    <center>
+</head>
+
+<body>
     <div>
         <h1><strong>Informações</strong></h1>
     </div>
-       <fieldset>
+    <fieldset>
         <div>
             <label>Texto1</label>
-                <input type="text" name="texto1" id="texto1" placeholder="sim">
-            <br>   
+            <input type="text" name="texto1" id="texto1" placeholder="sim">
+            <br>
 
             <label>Texto2</label>
-                <input type="text" name="texto2" id="texto2" placeholder="talvez">
+            <input type="text" name="texto2" id="texto2" placeholder="talvez">
             <br>
 
             <Label>Texto3</Label>
-                <input type="text" name="texto3" id="texto3" placeholder="claro">
+            <input type="text" name="texto3" id="texto3" placeholder="claro">
         </div>
-    </fieldset> 
-        <div>
+    </fieldset>
+    <div>
 
-            <input type="button" onclick="PegarInfo();" value="sim" id="botao">
-            
-        </div>
+        <input type="button" onclick="PegarInfo();" value="sim" id="botao">
 
-        <p id="paragrafo1"></p>
+    </div>
+
+    <p id="paragrafo1"></p>
     <br><br>
-        <p id="paragrafo2"></p>
+    <p id="paragrafo2"></p>
     <br><br>
-        <p id="paragrafo3"></p>
+    <p id="paragrafo3"></p>
 
 
-    </body>
-</center>   
+</body>
+</center>
+
 </html>
