--- a/testes.html
+++ b/testes.html
@@ -1,40 +1,67 @@
-<meta charset="utf-8">
+<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">a
 
-<canvas width="600" height="400"></canvas>
 
-<script type="text/javascript">
+<canvas width="2500" height="1200"></canvas>
 
+<script>
     var tela = document.querySelector('canvas');
     var pincel = tela.getContext('2d');
-  
+    pincel.fillStyle = 'lightgray';
+    pincel.fillRect(0, 0, 2300, 1200);
 
-    function desenhaCirculo(x, y, raio) {
+    var raio = 20
 
-        pincel.fillStyle = 'blue';
+    var xAleatorio;
+    var yAleatorio;
+
+    function desenhaCirculo(x, y, raio, cor) {
+        pincel.fillStyle = cor;
         pincel.beginPath();
-        pincel.arc(x, y, raio, 0, 2 * 3.14);
+        pincel.arc(x, y, raio, 0, 2 * Math.PI);
         pincel.fill();
     }
 
-    function limpaTela() {
-    pincel.clearRect(0, 0, 600, 400);
+    function desenhaAlvo(x, y) {
+
+        desenhaCirculo(x, y, raio + 20, 'red')
+        desenhaCirculo(x, y, raio + 10, 'white')
+        desenhaCirculo(x, y, raio, 'red')
     }
 
-    var x = 20;
-    var sentido = 1;
+    function limpaTela() {
+        pincel.clearRect(0, 0, 2300, 1400);
+    }
+
+    function sorteiaPosicao(maximo) {
+
+        return Math.floor(Math.random() * maximo)
+    }
 
     function atualizaTela() {
         limpaTela();
-        if (x > 600){
-            sentido = -1;
-        } else if (x < 0){
-            sentido = 1;
+
+        xAleatorio = sorteiaPosicao(1600);
+        yAleatorio = sorteiaPosicao(1400);
+
+        desenhaAlvo(xAleatorio, yAleatorio)
+    }
+    setInterval(atualizaTela, 800);
+
+
+    function disparo(evento) {
+
+        var x = evento.pageX - tela.offsetLeft;
+        var y = evento.pageY - tela.offsetTop;
+
+        if((x > xAleatorio - raio) 
+        && (x < xAleatorio + raio) 
+        && (y > yAleatorio - raio) 
+        && (y < yAleatorio + raio)
+        ){
+        alert("você acertou?");
+        }    
         }
 
-        desenhaCirculo(x, 20, 10);
-        x = x + sentido;
-    }
+        tela.onclick = disparo;
 
-    setInterval(atualizaTela, 20);
-document.write("Sim, teste ssssim")
 </script>
