--- a/comparar.html
+++ b/comparar.html
@@ -1,108 +1,74 @@
-<meta charset="UTF-8">
-
-<canvas width="600" height="400"></canvas>
-
 <script>
-  function desenhaQuadrado(x, y, tamanho, cor) {
+ //variáveis da bolinha
+let xBolinha = 300;
+let yBolinha = 200;
+let diametro = 15;
+let raio = diametro / 2 ;
 
-    pincel.fillStyle = cor;
-    pincel.fillRect(x, y, tamanho, tamanho)
-    pincel.fill();
+//velocidade da bolinha
+let velocidadeXBolinha = 6;
+let velocidadeYBolinha = 6;
+
+
+//variáveis da raquete
+let xRaquete = 5;
+let yRaquete = 150;
+let raqueteComprimento = 10;
+let raqueteAltura = 90;
+
+function setup() {
+  createCanvas(600, 400);
+}
+
+function draw() {
+  background(0);
+  mostraBolinha();
+  movimentaBolinha();
+  verificaColisaoBorda();
+  mostraRaquete();
+  movimentaMinhaRaquete();
+  verificaColisaoRaquete();
+}
+
+function mostraBolinha(){
+  circle(xBolinha, yBolinha, diametro);
+}
+
+function movimentaBolinha(){
+  xBolinha += velocidadeXBolinha;
+  yBolinha += velocidadeYBolinha;
+}
+
+function verificaColisaoBorda(){
+  if (xBolinha + raio> width ||
+     xBolinha - raio< 0){
+    velocidadeXBolinha *= -1;
   }
-
-  function desenhaCirculo(x, y, raio, cor) {
-
-    pincel.fillStyle = cor;
-    pincel.beginPath();
-    pincel.arc(x, y, raio, 0, 2 * 3.14);
-    pincel.fill();
-
+  if (yBolinha + raio> height ||
+     yBolinha - raio < 0){
+    velocidadeYBolinha *= -1;
   }
+}
 
-  function desenhaPaletaDeCores() {
+function mostraRaquete(){
+  rect(xRaquete, yRaquete, raqueteComprimento, 
+      raqueteAltura);
+}
 
-    desenhaQuadrado(xVermelho, yQuadrados, tamanhoQuadrados, 'red');
-    desenhaQuadrado(xVerde, yQuadrados, tamanhoQuadrados, 'green');
-    desenhaQuadrado(xAzul, yQuadrados, tamanhoQuadrados, 'blue');
-
+function movimentaMinhaRaquete(){
+  if (keyIsDown(UP_ARROW)){
+    yRaquete -= 10;
   }
-
-  function lidaComMovimentoDoMouse(evento) {
-
-    var x = evento.pageX - tela.offsetLeft;
-    var y = evento.pageY - tela.offsetTop;
-
-
-    if (desenha && podeDesenharNaArea(x, y)) {
-
-      desenhaCirculo(x, y, 5, corAtual);
-    }
+  if (keyIsDown(DOWN_ARROW)){
+    yRaquete += 10;
   }
+}
 
-  function habilitaDesenhar() {
-
-    desenha = true;
+function verificaColisaoRaquete(){
+  if (xBolinha - raio < xRaquete + raqueteComprimento && 
+      yBolinha - raio < yRaquete + raqueteAltura && 
+      yBolinha + raio > yRaquete){
+    velocidadeXBolinha *= -1;
   }
-
-  function desabilitaDesenhar() {
-
-    desenha = false;
-  }
-
-  function podeDesenharNaArea(x, y) {
-
-    if (x >= 0 && x < 3 * tamanhoQuadrados && y >= 0 && y < tamanhoQuadrados) {
-      return false;
-    } else {
-      return true;
-    }
-  }
-
-  function selecionaCor(evento) {
-
-    var x = evento.pageX - tela.offsetLeft;
-    var y = evento.pageY - tela.offsetTop;
-
-
-    if (y > yQuadrados && y < yQuadrados + tamanhoQuadrados) {
-
-      if (x > xVermelho && x < xVermelho + tamanhoQuadrados) {
-
-        corAtual = 'red';
-
-      } else if (x > xVerde && x < xVerde + tamanhoQuadrados) {
-
-        corAtual = 'green';
-
-      } else if (x > xAzul && x < xAzul + tamanhoQuadrados) {
-
-        corAtual = 'blue';
-      }
-    }
-  }
-
-
-
-  var tela = document.querySelector('canvas');
-  var pincel = tela.getContext('2d');
-  pincel.fillStyle = 'lightgray';
-  pincel.fillRect(0, 0, 600, 400);
-
-  var desenha = false;
-  var corAtual = 'blue';
-  var xVermelho = 0;
-  var xVerde = 50;
-  var xAzul = 100;
-  var yQuadrados = 0;
-  var tamanhoQuadrados = 50;
-
-  desenhaPaletaDeCores();
-
-  tela.onmousemove = lidaComMovimentoDoMouse;
-
-  tela.onmousedown = habilitaDesenhar;
-
-  tela.onmouseup = desabilitaDesenhar;
-
-  tela.onclick = selecionaCor;
+}
 </script>
