--- a/VacaAndaFrente/VacaAndaFrente.html
+++ b/VacaAndaFrente/VacaAndaFrente.html
@@ -1,20 +1,50 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <script>
-        document.write("oi?")
+<canvas width="1200" height="600">
+
+<script>
+
+var tela = document.querySelector('canvas');
+var pincel = tela.getContext('2d')
+pincel.fillStyle = 'black'
+pincel.fillRect(0, 0, 1200, 600)
+
+function desenhaLinha(x, y){
+
+    pincel.fillStyle = 'white'
+    pincel.fillRect(x, y, 200, 10)
+
+
+}
+
+desenhaLinha(0, 80);
+
+function desenhaBolinha(x, y, raio, cor) {
+pincel.fillStyle = cor;
+pincel.beginPath();
+pincel.arc(x, y, raio, 0, 2 * 3.14);
+pincel.fill();
+}
+function fazRoda(x, y){
+desenhaBolinha(x, y + 25, 8, 'black')
+desenhaBolinha(x, y + 25, 7, 'white')
+desenhaBolinha(x, y + 25, 3, 'black')
+desenhaBolinha(x+40, y + 25, 8, 'black')
+desenhaBolinha(x+40, y + 25, 7, 'white')
+desenhaBolinha(x+40, y + 25, 3, 'black')
+}
+
+
+function desenhaCarro(x, y, cor){
+pincel.fillStyle = cor;
+pincel.fillRect(x, y, 40, 25)
+fazRoda(x, y);
+}
+
+desenhaCarro(800, 100, 'white')
 
 
 
 
 
 
-    </script>
-</body>
-</html>
+    
+</script>
