--- a/VacaAndaFrente/VacaAndaFrente.html
+++ b/VacaAndaFrente/VacaAndaFrente.html
@@ -1,50 +1,219 @@
 <canvas width="1200" height="600">
 
-<script>
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>coisa pra frente</title>
+    </head>
 
-var tela = document.querySelector('canvas');
-var pincel = tela.getContext('2d')
-pincel.fillStyle = 'black'
-pincel.fillRect(0, 0, 1200, 600)
+    <body>
 
-function desenhaLinha(x, y){
+        <script>
+            var tela = document.querySelector('canvas');
+            var pincel = tela.getContext('2d')
+            pincel.fillStyle = 'black'
+            pincel.fillRect(0, 0, 1200, 600)
 
-    pincel.fillStyle = 'white'
-    pincel.fillRect(x, y, 200, 10)
+            function limpaTela() {
 
+                pincel.fillStyle = 'black'
+                pincel.fillRect(0, 0, 1200, 600)
 
-}
+            }
 
-desenhaLinha(0, 80);
-
-function desenhaBolinha(x, y, raio, cor) {
-pincel.fillStyle = cor;
-pincel.beginPath();
-pincel.arc(x, y, raio, 0, 2 * 3.14);
-pincel.fill();
-}
-function fazRoda(x, y){
-desenhaBolinha(x, y + 25, 8, 'black')
-desenhaBolinha(x, y + 25, 7, 'white')
-desenhaBolinha(x, y + 25, 3, 'black')
-desenhaBolinha(x+40, y + 25, 8, 'black')
-desenhaBolinha(x+40, y + 25, 7, 'white')
-desenhaBolinha(x+40, y + 25, 3, 'black')
-}
+            var distanciaLinha = 40
+            var comprimentoLinha = 200
+            var espaçamento = 100
+            var xe = 20
+            var ye = 80
 
 
-function desenhaCarro(x, y, cor){
-pincel.fillStyle = cor;
-pincel.fillRect(x, y, 40, 25)
-fazRoda(x, y);
-}
+            function desenhaEstrada() {
 
-desenhaCarro(800, 100, 'white')
+                pincel.fillStyle = 'yellow'
+                pincel.fillRect(xe, ye, comprimentoLinha, 10)
+                pincel.fillRect(xe + comprimentoLinha + distanciaLinha, ye, comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 2) + (distanciaLinha * 2), ye, comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 3) + (distanciaLinha * 3), ye, comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 4) + (distanciaLinha * 4), ye, comprimentoLinha, 10)
+
+                pincel.fillRect(xe, ye + espaçamento, comprimentoLinha, 10)
+                pincel.fillRect(xe + comprimentoLinha + distanciaLinha, ye + espaçamento, comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 2) + (distanciaLinha * 2), ye + espaçamento, comprimentoLinha,
+                    10)
+                pincel.fillRect(xe + (comprimentoLinha * 3) + (distanciaLinha * 3), ye + espaçamento, comprimentoLinha,
+                    10)
+                pincel.fillRect(xe + (comprimentoLinha * 4) + (distanciaLinha * 4), ye + espaçamento, comprimentoLinha,
+                    10)
+
+                pincel.fillRect(xe, ye + (espaçamento * 2), comprimentoLinha, 10)
+                pincel.fillRect(xe + comprimentoLinha + distanciaLinha, ye + (espaçamento * 2), comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 2) + (distanciaLinha * 2), ye + (espaçamento * 2),
+                    comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 3) + (distanciaLinha * 3), ye + (espaçamento * 2),
+                    comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 4) + (distanciaLinha * 4), ye + (espaçamento * 2),
+                    comprimentoLinha, 10)
+
+                pincel.fillRect(xe, ye + (espaçamento * 3), comprimentoLinha, 10)
+                pincel.fillRect(xe + comprimentoLinha + distanciaLinha, ye + (espaçamento * 3), comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 2) + (distanciaLinha * 2), ye + (espaçamento * 3),
+                    comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 3) + (distanciaLinha * 3), ye + (espaçamento * 3),
+                    comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 4) + (distanciaLinha * 4), ye + (espaçamento * 3),
+                    comprimentoLinha, 10)
+
+                pincel.fillRect(xe, ye + (espaçamento * 4), comprimentoLinha, 10)
+                pincel.fillRect(xe + comprimentoLinha + distanciaLinha, ye + (espaçamento * 4), comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 2) + (distanciaLinha * 2), ye + (espaçamento * 4),
+                    comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 3) + (distanciaLinha * 3), ye + (espaçamento * 4),
+                    comprimentoLinha, 10)
+                pincel.fillRect(xe + (comprimentoLinha * 4) + (distanciaLinha * 4), ye + (espaçamento * 4),
+                    comprimentoLinha, 10)
+
+                pincel.fillStyle = 'grey'
+                pincel.fillRect(0, 0, 1200, 50)
+                pincel.fillRect(0, 550, 1200, 50)
+
+            }
+
+            desenhaEstrada(20, 80);
+
+            function desenhaBolinha(x, y, raio, cor) {
+                pincel.fillStyle = cor;
+                pincel.beginPath();
+                pincel.arc(x, y, raio, 0, 2 * 3.14);
+                pincel.fill();
+            }
+
+            var xCVe = 1200 - 300
+            var xCAz = 1200 - 300
+            var xCLa = 1200 - 300
+            var xCRo = 1200 - 300
+
+            var yCVe = 120
+            var yCAz = 230
+            var yCLa = 330
+            var yCRo = 430
+
+            function fazRoda(x, y) {
+                desenhaBolinha(x, y + 25, 8, 'black')
+                desenhaBolinha(x, y + 25, 7, 'white')
+                desenhaBolinha(x, y + 25, 3, 'black')
+                desenhaBolinha(x + 40, y + 25, 8, 'black')
+                desenhaBolinha(x + 40, y + 25, 7, 'white')
+                desenhaBolinha(x + 40, y + 25, 3, 'black')
+            }
+
+            var margemHitBox = 10
+            var alturaCarro = 35
+
+            function desenhaCarro(x, y, cor) {
+
+                pincel.fillStyle = 'black'
+                pincel.fillRect(x - margemHitBox, y, 40 + margemHitBox, alturaCarro)
+
+
+                pincel.fillStyle = cor;
+                pincel.fillRect(x, y, 40, 25)
+                fazRoda(x, y);
+            }
+
+            function todosCarros() {
+                desenhaCarro(xCVe, yCVe, 'red');
+                desenhaCarro(xCAz, yCAz, 'blue');
+                desenhaCarro(xCLa, yCLa, 'orange');
+                desenhaCarro(xCRo, yCRo, 'purple');
+            }
+            todosCarros()
+
+
+            var posiçãoXPlayer = 600
+            var posiçãoYPlayer = 550
+            var larguraPlayer = 30
+
+            function desenhaPlayer() {
+
+                pincel.fillStyle = 'white'
+                pincel.fillRect(posiçãoXPlayer, posiçãoYPlayer, larguraPlayer, larguraPlayer)
+            }
+
+            function sobePlayer() {
+
+                posiçãoYPlayer = posiçãoYPlayer - 50
+            }
+
+            function descePlayer() {
+
+                posiçãoYPlayer = posiçãoYPlayer + 50
+            }
+
+            function direitaPlayer() {
+
+                posiçãoXPlayer = posiçãoXPlayer + 50
+            }
+
+            function esquerdaPlayer() {
+
+                posiçãoXPlayer = posiçãoXPlayer - 50
+            }
+
+            desenhaPlayer(600, 550)
+
+
+            document.onkeydown = (e) => {
+                e = e || window.event;
+                if (e.keyCode === 38) {
+                    sobePlayer()
+                } else if (e.keyCode === 40) {
+                    descePlayer()
+                } else if (e.keyCode === 37) {
+                    esquerdaPlayer()
+                } else if (e.keyCode === 39) {
+                    direitaPlayer()
+                }
+            }
+
+            function animaTudo() {
+
+                limpaTela()
+                desenhaEstrada()
+
+                desenhaPlayer()
+                todosCarros()
+
+
+            }
+            setInterval(animaTudo, 10)
+        </script>
+    </body>
 
 
 
 
 
 
-    
-</script>
+
+
+
+
+
+
+
+
+
+
+
+    //function localizaMouse(evento) {
+
+    //var x = evento.pageX - tela.offsetLeft;
+    // y = evento.pageY - tela.offsetTop;
+
+    //console.log(evento.pageX)
+    //console.log(evento.pageY)
+    //}
+
+    //tela.onclick = localizaMouse
