--- a/PaginaBunita/testes.html
+++ b/PaginaBunita/testes.html
@@ -6,20 +6,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+
     <title>aprendizado css</title>
 </head>
 
-    <body>
+<body>
+    <div class="TelaAzul">
 
-    <h1 style="text-align:center" sty>oi?</h1>
+        <h1>oi?</h1>
 
-    <p id="1Pa">Bem, é nesse paragrafo que eu escrevo a ideia principal</p>
+        <p id="1Pa">Bem, é nesse paragrafo que eu escrevo a ideia principal</p>
 
-    <p>e é nesse que... sei lá, eu continuo?</p>
+        <p>e é nesse que... sei lá, eu continuo?</p>
 
-    <span></span>
-
-
+    </div>
 
 
 
