--- a/PaginaBunita/testes.html
+++ b/PaginaBunita/testes.html
@@ -11,14 +11,17 @@
 </head>
 
 <body>
-    <div class="TelaAzul">
+    <div class="LugarBnt">
+        <div class="Quadro"class="robo">
+            <div class="TelaAzul">
+                <br><br>
+                <h1>oi?</h1>
+                <br><br>
+                <p id="1Pa">Bem, é nesse paragrafo que eu escrevo a ideia principal</p>
 
-        <h1>oi?</h1>
-
-        <p id="1Pa">Bem, é nesse paragrafo que eu escrevo a ideia principal</p>
-
-        <p>e é nesse que... sei lá, eu continuo?</p>
-
+                <p>e é nesse que... sei lá, eu continuo?</p>
+            </div>
+        </div>
     </div>
 
 
