--- a/PaginaTravicar/Index.html
+++ b/PaginaTravicar/Index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,13 +8,54 @@
     <link rel="stylesheet" href="Travicar.css">
     <title>Travicar</title>
 </head>
+
 <body class="Background">
+
     <div class="Start">
-        
+
+        <button type="submit" class="BtnHome" onclick="alert()">
+            Home
+        </button>
+
+        <button type="submit" class="BtnPortal">
+            Portal
+        </button>
+        <button class="Logo">
+            .
+        </button>
+    </div>
+
+    <div class="Banner"></div>
+
+    <div alt="Portal">
+        <center>
+            <H1>
+                Portal
+            </H1>
+            <section>
+                <div class="Portal">
+                    <div class="Velo">
+                        <img src="aTravVelo.png">
+                    </div>
+                    <div class="ExPor">
+                        <p class="TextoBr">
+                        
+                            Ferramenta de Gestão Estratégica para sua empresa. Garanta o máximo de retorno financeiro em seus voos.
+                        </p>
+                    </div>
+                    <div>
+                        <button type="submit" class="AbFolder"></button>
+                        <button type="submit" class="AbYoutube"></button>
+                    </div>
+
+                </div>
+            </section>
+        </center>
+
     </div>
 
 
-
-
+<br><br><br><br><br>
 </body>
+
 </html>
