--- a/PaginaTravicar/Index.html
+++ b/PaginaTravicar/Index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Travicar.css">
+    <source src="JavaScript.js" type="JavaScript">
     <title>Travicar</title>
 </head>
 
@@ -38,11 +39,13 @@
                         <img src="aTravVelo.png">
                     </div>
                     <div class="ExPor">
+                        <br><br>
                         <p class="TextoBr">
                         
                             Ferramenta de Gestão Estratégica para sua empresa. Garanta o máximo de retorno financeiro em seus voos.
                         </p>
                     </div>
+                    <br><br><br><br><br><br><br>
                     <div>
                         <button type="submit" class="AbFolder"></button>
                         <button type="submit" class="AbYoutube"></button>
