--- a/Praticos/testes.html
+++ b/Praticos/testes.html
@@ -7,33 +7,19 @@
     <title>testezin</title>
 </head>
 <body>
-    velocidadeXBola = velocidadeXBola * -1
+
+    <button type="submit" onclick="verifica()"></button>
     <script>
 
 
 
+const a = true;
+const b = "teste";
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+function verifica(){
+    if(typeof a === "boolean") {
+    console.log("É booleano!");
+}}
 
 
 
