--- a/Venda/Index.html
+++ b/Venda/Index.html
@@ -16,8 +16,26 @@
             <div class="Bloa">
                 <img src="Imagens/Logo.png" alt="Logo" class="Logo">
             </div>
+            <div class="TituloLoja">
+                <h1 class="EstiloTit">
+                    GunfightStore
+                </h1>
+            </div>
         </div>
     </header>
+    <div class="Sobre">
+        <h2 class="SobreTit" style="text-align:center ;">
+            Um poquinho sobre a loja
+        </h2>
+        <div class="espSob">
+            <p>
+                É aqui onde teria algumas informações e bla bla bla teria algumas informaçõese sei lá o que escrever
+            </p>
+        </div>
+    </div>
+    <div class="espaça">
+
+    </div>
 </body>
 
 </html>
