--- a/Venda/Index.html
+++ b/Venda/Index.html
@@ -28,7 +28,7 @@
             Um poquinho sobre a loja
         </h2>
         <div class="espSob">
-            <p>
+            <p class="pSob">
                 É aqui onde teria algumas informações e bla bla bla teria algumas informaçõese sei lá o que escrever
             </p>
         </div>
