--- a/Venda/Index.html
+++ b/Venda/Index.html
@@ -24,7 +24,7 @@
         </div>
     </header>
     <div class="Sobre">
-        <h2 class="SobreTit" style="text-align:center ;">
+        <h2 class="SobreTit">
             Um poquinho sobre a loja
         </h2>
         <div class="espSob">
@@ -33,8 +33,17 @@
             </p>
         </div>
     </div>
-    <div class="espaça">
-
+    <div class="espaça"></div>
+    <div class="produtos">
+        <div class="produto123" id="produto1">
+            <img src="Imagens/Glock.png" alt="glock" class="armas" id="glock">
+        </div>
+        <div class="produto123" id="produto2">
+            <img src="Imagens/m4.png" alt="m4" class="armas" id="m4">
+        </div>
+        <div class="produto123" id="produto3">
+            <img src="imagens/devolver.png" alt="revolver" class="armas" id="devolver">
+        </div>
     </div>
 </body>
 
