--- a/Venda/Index.html
+++ b/Venda/Index.html
@@ -37,12 +37,15 @@
     <div class="produtos">
         <div class="produto123" id="produto1">
             <img src="Imagens/Glock.png" alt="glock" class="armas" id="glock">
+            <div id="preco1"></div>
         </div>
         <div class="produto123" id="produto2">
             <img src="Imagens/m4.png" alt="m4" class="armas" id="m4">
+            <div id="preco2"></div>
         </div>
         <div class="produto123" id="produto3">
             <img src="imagens/devolver.png" alt="revolver" class="armas" id="devolver">
+            <div id="preco3"></div>
         </div>
     </div>
 </body>
