venda quase pronta

--- a/Venda/Index.html
+++ b/Venda/Index.html
@@ -10,44 +10,85 @@
     <title>Itens Da Loja</title>
 </head>
 
-<body>
-    <header>
-        <div class="Home">
-            <div class="Bloa">
-                <img src="Imagens/Logo.png" alt="Logo" class="Logo">
-            </div>
-            <div class="TituloLoja">
-                <h1 class="EstiloTit">
-                    GunfightStore
-                </h1>
-            </div>
+<header>
+    <div class="Home">
+        <div class="Bloa">
+            <img src="Imagens/Logo.png" alt="Logo" class="Logo">
         </div>
-    </header>
-    <div class="Sobre">
-        <h2 class="SobreTit">
-            Um poquinho sobre a loja
-        </h2>
-        <div class="espSob">
-            <p class="pSob">
-                É aqui onde teria algumas informações e bla bla bla teria algumas informaçõese sei lá o que escrever
-            </p>
+        <div class="TituloLoja">
+            <h1 class="EstiloTit">
+                GunfightStore
+            </h1>
         </div>
     </div>
-    <div class="espaça"></div>
-    <div class="produtos">
-        <div class="produto123" id="produto1">
-            <img src="Imagens/Glock.png" alt="glock" class="armas" id="glock">
-            <div id="preco1"></div>
-        </div>
-        <div class="produto123" id="produto2">
-            <img src="Imagens/m4.png" alt="m4" class="armas" id="m4">
-            <div id="preco2"></div>
-        </div>
-        <div class="produto123" id="produto3">
-            <img src="imagens/devolver.png" alt="revolver" class="armas" id="devolver">
-            <div id="preco3"></div>
+</header>
+<div class="Sobre">
+    <h2 class="SobreTit">
+        Um poquinho sobre a loja
+    </h2>
+    <div class="espSob">
+        <p class="pSob">
+            É aqui onde teria algumas informações e bla bla bla teria algumas informaçõese sei lá o que escrever
+        </p>
+    </div>
+</div>
+<div class="espaça"></div>
+<div class="produtos">
+    <div class="produto123" id="produto1">
+        <img src="Imagens/Glock.png" alt="glock" class="armas" id="glock">
+        <div class="precos">
+            <h1 class="h1">
+                Glock 9mm
+            </h1>
+            <br>
+            <p1 class="p1">
+                11.800R$
+            </p1>
+            <br>
+            <p2 class="p2">
+                ou 2.950X4
+            </p2><br>
+            <button type="button" class="btn" onclick="//A ESCREVER//" placeholder="COMPRAR">COMPRAR</button>
         </div>
     </div>
+    <div class="produto123" id="produto2">
+        <img src="Imagens/m4.png" alt="m4" class="armas" id="m4">
+        <div class="precos">
+            <h1 class="h1">
+                Glock 9mm
+            </h1>
+            <br>
+            <p1 class="p1">
+                11.800R$
+            </p1>
+            <br>
+            <p2 class="p2">
+                ou 2.950X4
+            </p2><br>
+            <button type="button" class="btn" onclick="//A ESCREVER//" placeholder="COMPRAR">COMPRAR</button>
+        </div>
+    </div>
+    <div class="produto123" id="produto3">
+        <img src="imagens/devolver.png" alt="revolver" class="armas" id="devolver">
+        <div class="precos">
+            <h1 class="h1">
+                Revolver 357
+            </h1>
+            <br>
+            <p1 class="p1">
+                4.172R$
+            </p1>
+            <br>
+            <p2 class="p2">
+                ou 450,58X10
+            </p2><br>
+            <button type="button" class="btn" onclick="//A ESCREVER//" placeholder="COMPRAR">COMPRAR</button>
+
+        </div>
+    </div>
+</div>
+<!--<div id="fundo"></div>-->
+<!--DEPOIS FAZER O FUNDO-->
 </body>
 
 </html>
