--- a/Venda/Login.html
+++ b/Venda/Login.html
@@ -39,7 +39,7 @@
                     <input type="checkbox" id="rememberMe">
                     <label for="rememberMe">Remember me</label>
                     </div>
-                    <a href="#">Esqueci minha senha</a>
+                    <a href="Index.html">Esqueci minha senha</a>
                 </div>
                 <button type="submit">Sign In</button>
             </form>
