--- a/2/2index.html
+++ b/2/2index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="resett.css">
     <link rel="stylesheet" href="style.css">
     <title>Produtos</title>
 </head>
@@ -18,9 +18,9 @@
             </div>
             <nav>
                 <ul>
-                    <li> <a href="#">Home</a></li>
-                    <li> <a href="#">Produtos</a></li>
-                    <li> <a href="#">Suporte</a></li>
+                    <li> <a href="Diversão.html"> <button type="submit" class="btnHome">Home</button> </a></li>
+                    <li> <a href="Login.html"> <button type="submit" class="btnHome">Produtos</button> </a></li>
+                    <li> <a href="#"> <button type="submit" class="btnHome">Suporte</button> </a></li>
                 </ul>
             </nav>
         </div>
