--- a/2/Index.html
+++ b/2/Index.html
@@ -55,6 +55,11 @@
 
         </ul>
     </main>
+    <footer class="rodape">
+        <img src="Imagens/LogoW.jfif" alt="LogoW">
+        <br><br><br>
+        <p3 class="copyright"> &copy; Direitos de autoria: Gunfight</p3>
+    </footer>
 </body>
 
 </html>
