--- a/2/Login.html
+++ b/2/Login.html
@@ -7,44 +7,62 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="Login.js"></script>
     <link rel="stylesheet" href="login.css">
-    <link rel="stylesheet"href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
     <title>Document</title>
 </head>
 
 <body>
-    <div class="login-container">
-        <div class="login-card">
-            <div class="login-card-logo">
-                <img src="imagens/Logo.png" id="login-card-logo">
+    <header>
+        <div class="caixa">
+            <div class="logo">
+                <h1><img src="Imagens/Logo.png" id="logo" alt="logo"></h1>
             </div>
-            <div class="login-card-header">
-                <h1>Sign in</h1>
-                <div>Por favor entre para acessar ao site</div>
-            </div>
-            <form class="login-card-form">
-                <div class="form-item">
-                    <span class="form-item-icon material-symbols-rounded">mail</span>
-                    <input type="email" id="email" placeholder="Email" required autofocus>
-                    
+            <nav>
+                <ul>
+                    <li> <a href="Diversão.html"> <button type="submit" class="btnHome">Home</button> </a></li>
+                    <li> <a href="Login.html"> <button type="submit" class="btnHome">Produtos</button> </a></li>
+                    <li> <a href="#"> <button type="submit" class="btnHome">Suporte</button> </a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <div class="tudo">
+        <div class="login-container">
+            <div class="login-card">
+                <div class="login-card-logo">
+                    <img src="imagens/Logo.png" id="login-card-logo">
                 </div>
-                <div class="form-item">
-                    <span class="form-item-icon material-symbols-rounded">Lock</span>
-                    <input type="password" id="password" placeholder="Senha" required>
-                    
+                <div class="login-card-header">
+                    <h1>Sign in</h1>
+                    <div>Por favor entre para acessar ao site</div>
                 </div>
-                <div class="form-item-other">
-                    <div class="checkbox">
-                    <input type="checkbox" id="rememberMe">
-                    <label for="rememberMe">Remember me</label>
+                <form class="login-card-form">
+                    <div class="form-item">
+                        <span class="form-item-icon material-symbols-rounded">mail</span>
+                        <input type="email" id="email" placeholder="Email" required autofocus>
+
                     </div>
-                    <a href="Index.html">Esqueci minha senha</a>
-                </div>
-                <button type="submit">Sign In</button>
-            </form>
-            <div class="login-another-acount">não tem uma conta? <a href="#">Crie outra</a></div>
+                    <div class="form-item">
+                        <span class="form-item-icon material-symbols-rounded">Lock</span>
+                        <input type="password" id="password" placeholder="Senha" required>
+
+                    </div>
+                    <div class="form-item-other">
+                        <div class="checkbox">
+                            <input type="checkbox" id="rememberMe">
+                            <label for="rememberMe">Remember me</label>
+                        </div>
+                        <a href="Index.html">Esqueci minha senha</a>
+                    </div>
+                    <button type="submit">Sign In</button>
+                </form>
+                <div class="login-another-acount">não tem uma conta? <a href="#">Crie outra</a></div>
+            </div>
         </div>
     </div>
+
 
 </body>
 
