--- a/Gunfight/Html/Produtos.html
+++ b/Gunfight/Html/Produtos.html
@@ -5,8 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="resett.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../Css/resett.css">
+    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="icon" href="../Images/HtmlIcon.png">
     <title>Produtos</title>
 </head>
 
@@ -14,13 +15,13 @@
     <header>
         <div class="caixa">
             <div class="logo">
-                <h1><img src="Imagens/Logo.png" id="logo" alt="logo"></h1>
+                <h1><img src="../Images/Logo.png" id="logo" alt="logo"></h1>
             </div>
             <nav>
                 <ul>
-                    <li> <a href="Diversão.html"> <button type="submit" class="btnHome">Home</button> </a></li>
-                    <li> <a href="Login.html"> <button type="submit" class="btnHome">Produtos</button> </a></li>
-                    <li> <a href="#"> <button type="submit" class="btnHome">Suporte</button> </a></li>
+                    <li> <a href="LoginGun.html"> <button type="submit" class="btnHome">Home</button> </a></li>
+                    <li> <a href="Produtos.html"> <button type="submit" class="btnHome">Produtos</button> </a></li>
+                    <li> <a href="Diversão.html"> <button type="submit" class="btnHome">Suporte</button> </a></li>
                 </ul>
             </nav>
         </div>
@@ -29,7 +30,7 @@
         <ul class="produtos">
             <li class="glock-div">
                 <h2 class="name">Glock</h2>
-                <img src="Imagens/Glock.png" id="glock" alt="Glock">
+                <img src="../Images/Glock.png" id="glock" alt="Glock">
                 <p class="precoG">11.800R$</p>
                 <p class="precoP">ou 2.950R$ X4</p2>
                     <br>
@@ -38,7 +39,7 @@
             </li>
             <li class="m4-div">
                 <h2 class="name">M4</h2>
-                <img src="Imagens/m4.png" id="m4" alt="M4">
+                <img src="../Images/m4.png" id="m4" alt="M4">
                 <p class="precoG">30.960R$</p>
                 <p class="precoP">ou 7.740R$ X4</p2>
                     <br>
@@ -46,7 +47,7 @@
             </li>
             <li class="revolver-div">
                 <h2 class="name">Revolver</h2>
-                <img src="Imagens/devolver.png" id="revolver" alt="Revolver">
+                <img src="../Images/devolver.png" id="revolver" alt="Revolver">
                 <p class="precoG">4.172R$</p>
                 <p class="precoP">ou 1.043R$ X4</p2>
                     <br>
@@ -56,7 +57,7 @@
         </ul>
     </main>
     <footer class="rodape">
-        <img src="Imagens/LogoW.jfif" alt="LogoW">
+        <img src="../Images/LogoW.jfif" alt="LogoW">
         <br><br><br>
         <p3 class="copyright"> &copy; Direitos de autoria: Gunfight</p3>
     </footer>
