--- a/Gunfight/Html/Diversão.html
+++ b/Gunfight/Html/Diversão.html
@@ -1,4 +1,13 @@
 <canvas width="1200" height="700"></canvas>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="../Css/resett.css">
+  <link rel="stylesheet" href="../Css/style.css">
+  <link rel="icon" href="../Images/HtmlIcon.png">
+  <title>Produtos</title>
+</head>
 
 <script>
     var tela = document.querySelector('canvas');
