--- a/Gunfight/Html/LoginGun.html
+++ b/Gunfight/Html/LoginGun.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="../Css/resett.css">
     <link rel="stylesheet" href="../Css/styleLogin.css">
     <link rel="icon" href="../Images/HtmlIcon.png">
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Login</title>
 </head>
 
@@ -19,16 +21,53 @@
             </div>
             <nav>
                 <ul>
-                    <li> <a href="LoginGun.html"> <button type="submit" class="btnHome">Home</button> </a></li>
-                    <li> <a href="Produtos.html"> <button type="submit" class="btnHome">Produtos</button> </a></li>
-                    <li> <a href="Diversão.html"> <button type="submit" class="btnHome">Suporte</button> </a></li>
+                    <li> <a href="LoginGun.html"><button type="submit" class="btnHome">Home</button></a></li>
+                    <li> <a href="Produtos.html"><button type="submit" class="btnHome">Produtos</button></a></li>
+                    <li> <a href="Diversão.html"><button type="submit" class="btnHome">Suporte</button></a></li>
                 </ul>
             </nav>
         </div>
     </header>
+    <br><br><br><br><br><br>
     <main>
-
+        <div class="main-title">
+            <h1 class="title">OIOI, bota os login</h1>
+            <br>
+            <p class="sub-title">faz isso pra tu poder entrar no site, vagabundo</p>
+        </div>
+        <br><br>
+        <form>
+            <div class="principal-content">
+                <div class="email">
+                    <label for="Email"><span class="icon material-symbols-rounded">mail</span></label>
+                    <input type="email" class="input" placeholder="Email" required>
+                </div>
+                <br>
+                <div class="password">
+                    <label for="password"><span class="icon material-symbols-rounded">Lock</span></label>
+                    <input type="password" class="input" placeholder="Password" required>
+                </div>
+                <br>
+                <div class="confirm-password">
+                    <label for="confirm-password"><span class="icon material-symbols-rounded">Lock</span></label>
+                    <input type="password" class="input" placeholder="Confirm-Password" required>
+                </div>
+            </div>
+            <br><br>
+            <div class="secondary-content">
+                <div class="checkbox">
+                    <input type="checkbox" class="checkbox">
+                    <label for="checkbox">Remember me</label>
+                </div>
+                <a href="#">Esqueci a senha</a>
+            </div>
+            <br><br>
+            <div class="button-submit">
+                <button type="submit" class="submit">SUBMIT</button>
+            </div>
+        </form>
     </main>
+    <br><br><br><br><br><br><br><br>
     <footer class="rodape">
         <img src="../Images/LogoW.jfif" alt="LogoW">
         <br><br><br>
