--- a/Gunfight/Html/LoginGun.html
+++ b/Gunfight/Html/LoginGun.html
@@ -21,9 +21,9 @@
             </div>
             <nav>
                 <ul>
-                    <li> <a href="LoginGun.html"><button type="submit" class="btnHome">Home</button></a></li>
+                    <li> <a href="Home.html"><button type="submit" class="btnHome">Home</button></a></li>
                     <li> <a href="Produtos.html"><button type="submit" class="btnHome">Produtos</button></a></li>
-                    <li> <a href="Diversão.html"><button type="submit" class="btnHome">Suporte</button></a></li>
+                    <li> <a href="LoginGun.html"><button type="submit" class="btnHome">Suporte</button></a></li>
                 </ul>
             </nav>
         </div>
