--- a/Gunfight/Html/Produtos.html
+++ b/Gunfight/Html/Produtos.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../Css/resett.css">
-    <link rel="stylesheet" href="../Css/style.css">
+    <link rel="stylesheet" href="../Css/styleProdutos.css">
     <link rel="icon" href="../Images/HtmlIcon.png">
     <title>Produtos</title>
 </head>
@@ -19,9 +19,9 @@
             </div>
             <nav>
                 <ul>
-                    <li> <a href="LoginGun.html"><button type="submit" class="btnHome">Home</button></a></li>
+                    <li> <a href="Home.html"><button type="submit" class="btnHome">Home</button></a></li>
                     <li> <a href="Produtos.html"><button type="submit" class="btnHome">Produtos</button></a></li>
-                    <li> <a href="Diversão.html"><button type="submit" class="btnHome">Suporte</button></a></li>
+                    <li> <a href="LoginGun.html"><button type="submit" class="btnHome">Suporte</button></a></li>
                 </ul>
             </nav>
         </div>
@@ -63,4 +63,4 @@
     </footer>
 </body>
 
-</html>
+</html>     
