--- a/Gunfight/Html/Home.html
+++ b/Gunfight/Html/Home.html
@@ -15,7 +15,7 @@
     <header>
         <div class="caixa">
             <div class="logo">
-                <h1><img src="../Images/Logo.png" id="logo" alt="logo"></h1>
+                <h1><img src="../Images/Logo.png" id="logo" alt="logo" width="20px"></h1>
             </div>
             <nav>
                 <ul>
@@ -28,31 +28,71 @@
     </header>
     <main>
         <div class="imagemHome">
-            <img src="../Images/FotoHome.jpg" alt="FotoHome" id="imagemHome">
+            <img src="../Images/FotoHome.jpg" alt="FotoHome" id="imagemHome" width="20px">
         </div>
-        <div class="about">
-            <h1 class="title-about">
-                Sobre
-            </h1>
-            <br>
-            <div class="text-about">
-                <p1 alt="introdução-sobre" id="p1">
-                    Localizada em algum lugar que eu não sei, a <strong>Gunfight</strong> tras para o
-                    mercado produtos de maior qualidade e serviços sobre armas de fogo e sobre defesa
-                    pessoal. Fundada em 2050, a Gunfight já é destaque na cidade e conquista novos 
-                    clientes todos os dias.
-                </p1>
+        <div class="container-about">
+            <div class="about">
+                <h1 class="title-about">
+                    Sobre
+                </h1>
                 <br><br>
-                <p2 alt="poema" id="p2">
-                    Nossa missão é: <strong>"Proporcionar aos nossos clientes os melhores produtos
-                    para nossos clientes"</strong>
-                </p2>
-                
+                <div class="text-about">
+                    <p1 alt="introdução-sobre" id="p1">
+                        Localizada em algum lugar que eu não sei, a <strong>Gunfight</strong> tras para o
+                        mercado produtos de maior qualidade e serviços sobre armas de fogo e sobre defesa
+                        pessoal. Fundada em 2050, a Gunfight já é destaque na cidade e conquista novos
+                        clientes todos os dias.
+                    </p1>
+                    <br><br>
+                    <p2 alt="poema" id="p2">
+                        Nossa missão é: <strong>"Proporcionar aos nossos clientes os melhores produtos
+                            para nossos clientes"</strong>
+                    </p2>
+                    <br><br>
+
+                </div>
             </div>
+        </div>
+        <div class="localizacao">
+            <h1>
+                Nosso estabelecimento
+            </h1>
+            <p>
+                Nosso estabelecimento esta em algum lugar da <strong>Groenlândia</strong>
+            </p>
+            <div class="mapa">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d24630911.16946892!2d-73.8123227696979!3d67.86457892714101!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4ea20dbbe3c07715%3A0x34cf9d830114e218!2sGroenl%C3%A2ndia!5e0!3m2!1spt-BR!2sbr!4v1668104229688!5m2!1spt-BR!2sbr"
+                    style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"
+                    id="mapa"></iframe>
+            </div>
+        </div>
+        <div class="beneficios">
+            <div class="lista">
+                <h1>
+                    Benefícios
+                </h1>
+                <ul>
+                    <li>Atendimento ao cliente</li>
+                    <li>Espaço diferenciado</li>
+                    <li>Localização</li>
+                    <li>Ótimo atendimento</li>
+                    <li>Pontualidade</li>
+                </ul>
+            </div>
+            <div class="imagem-lista">
+                <img src="../Images/glock2.jpg" alt="glock2" id="glock2" width="100%">
+            </div>
+        </div>
+        <div class="video">
+            <iframe id="video1" src="https://www.youtube.com/embed/mw5aA62Wg4Y"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
         </div>
     </main>
     <footer class="rodape">
-        <img src="../Images/LogoW.jfif" alt="LogoW">
+        <img src="../Images/LogoW.jfif" alt="LogoW" >
         <br><br><br>
         <p3 class="copyright"> &copy; Direitos de autoria: Gunfight</p3>
     </footer>
