--- a/Gunfight/Html/Home.html
+++ b/Gunfight/Html/Home.html
@@ -85,17 +85,20 @@
             </div>
         </div>
         <div class="video">
-            <iframe id="video1" src="https://www.youtube.com/embed/mw5aA62Wg4Y"
-                title="YouTube video player" frameborder="0"
+            <iframe id="video1" src="https://www.youtube.com/embed/mw5aA62Wg4Y" title="YouTube video player"
+                frameborder="0"
                 allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
     </main>
     <footer class="rodape">
-        <img src="../Images/LogoW.jfif" alt="LogoW" >
+        <div class="lock">
+            <img src="../Images/LogoW.jfif" alt="LogoW">
+        </div>
         <br><br><br>
         <p3 class="copyright"> &copy; Direitos de autoria: Gunfight</p3>
     </footer>
 </body>
 
 </html>
+    
